# maria

./: .gitignore  .maria  AGENTS.md  AUDIT.md  Cargo.toml  DESIGN.md  EMULATOR.md  IEEE_1800_MATRIX.md  README.md  ROADMAP.md  VERILATOR_COMPAT.md  errors.txt  opentitan.sh  opentitan_rtl.f  output.txt  package-lock.json  temp_error.txt  uvm_macros.svh
examples/: test_class_var.rs  test_new_method.rs
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.tsx
src/: debug_lexer.rs  edge_tests.rs  error.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/arena/: bump.rs  mod.rs  pool.rs  slab.rs  typed.rs
src/ast/: const_eval.rs  expr.rs  inline.rs  mod.rs  stmt.rs  types.rs
src/backend/: mod.rs
src/cache/: ast_cache.rs  cache_manager.rs  checksum.rs  dep_cache.rs  hir_cache.rs  mod.rs
src/debugger/: mod.rs
src/diagnostics/: codes.rs  diagnostic.rs  emitter.rs  mod.rs  recovery.rs
src/elaboration/: elaborator.rs  elaborator.rs.bak  mod.rs  transform.pl  transform.py  util.rs
src/frontend/: compile_session.rs  discovery.rs  io.rs  lexer.rs  mod.rs  module_index.rs  package_resolver.rs  simd.rs
src/hir/: builder.rs  hir.rs  lazy_elab.rs  mod.rs  types.rs
src/intern/: mod.rs  span.rs  string_intern.rs  table.rs
src/ir/: ir.rs
src/mir/: lower.rs  mir.rs  mod.rs  opt.rs
src/parser/: lexer.rs  mod.rs  parser.rs  preprocessor.rs  util.rs
src/plugin/: mod.rs  plugin.rs
src/profiling/: counters.rs  (+3 more)
test/: counter.sv  tb_counter.sv
test_picorv32/: picosoc_fixed.v  picosoc_lite.v  tb_picorv32.v  tb_picosoc.v  tb_picosoc_lite.v
(+72 files in other folders)
