[package]
name = "maria"
version = "0.3.0"
edition = "2021"
description = "RTL Simulator untuk SystemVerilog - dibangun dengan Rust"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rayon = "1"
thiserror = "2"
wavefst = { version = "0.1", default-features = false, features = ["gzip"] }

# ── Fase 0: Foundation ──
dashmap = "6"
crossbeam = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
mimalloc = { version = "0.1", features = ["secure"] }
memmap2 = "0.9"

# ── Utility ──
num_cpus = "1"
walkdir = "2"
fxhash = "0.2"
thread_local = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
